--- a/package.json
+++ b/package.json
@@ -10,16 +10,45 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
+		"onCommand:ooxmlViewer.viewContents",
+		"onView:ooxmlViewer"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "extension.helloWorld",
-				"title": "Hello World"
+				"command": "ooxmlViewer.viewContents",
+				"title": "View Contents",
+				"when": "resourceLangId == ooxml"
 			}
-		]
+		],
+		"languages": [
+			{
+				"id": "ooxml",
+				"extensions": [
+					".docx",
+					".xlsx",
+					".pptx"
+				]
+			}
+		],
+		"menus": {
+			"explorer/context": [
+				{
+					"command": "ooxmlViewer.viewContents",
+					"group": "navigation",
+					"when": "resourceLangId == ooxml"
+				}
+			]
+		},
+		"views": {
+			"explorer": [
+				{
+					"id": "ooxmlViewer",
+					"name": "OOXML Viewer"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
@@ -30,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
+		"@types/jszip": "^3.1.6",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.36.0",
@@ -38,5 +68,8 @@
 		"typescript": "^3.3.1",
 		"tslint": "^5.12.1",
 		"vscode-test": "^1.0.0-next.0"
+	},
+	"dependencies": {
+		"jszip": "^3.2.2"
 	}
 }
