Added formatting for xml documents

--- a/package.json
+++ b/package.json
@@ -63,13 +63,15 @@
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.36.0",
+		"@types/xml-formatter": "^1.1.0",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
-		"typescript": "^3.3.1",
 		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
 		"vscode-test": "^1.0.0-next.0"
 	},
 	"dependencies": {
-		"jszip": "^3.2.2"
+		"jszip": "^3.2.2",
+		"xml-formatter": "^1.1.0"
 	}
 }
