--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
 	"displayName": "OOXML Viewer",
 	"description": "Displays the contents of OOXML files",
 	"version": "0.0.1",
+	"license": "MIT",
+	"publisher": "yuenm18",
+	"homepage": "https://github.com/yuenm18/ooxml-viewer-vscode/blob/master/README.md",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yuenm18/ooxml-viewer-vscode.git"
+	},
+	"bugs": {
+		"url": "https://github.com/yuenm18/ooxml-viewer-vscode/issues"
+	},
+	"icon": "images/icon.png",
+	"keywords": [
+		"ooxml"
+	],
 	"engines": {
 		"vscode": "^1.36.0"
 	},
