--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"onCommand:ooxmlViewer.viewContents",
 		"onView:ooxmlViewer"
 	],
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -77,10 +77,11 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile",
+		"vscode:prepublish": "webpack --mode production",
+		"compile": "webpack --mode none",
+		"watch": "webpack --mode none --watch",
+		"test-watch": "tsc -watch -p ./",
+		"pretest": "tsc -p ./",
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
@@ -92,9 +93,12 @@
 		"@types/xml-formatter": "^1.1.0",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
+		"ts-loader": "^6.0.4",
 		"tslint": "^5.12.1",
 		"typescript": "^3.3.1",
-		"vscode-test": "^1.0.0-next.0"
+		"vscode-test": "^1.0.0-next.0",
+		"webpack": "^4.38.0",
+		"webpack-cli": "^3.3.6"
 	},
 	"dependencies": {
 		"jszip": "^3.2.2",
