--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"ooxml"
 	],
 	"engines": {
-		"vscode": "^1.36.0"
+		"vscode": "^1.47.0"
 	},
 	"categories": [
 		"Other"
@@ -78,30 +78,31 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "webpack --mode production",
-		"compile": "webpack --mode none",
-		"watch": "webpack --mode none --watch",
+		"compile": "webpack --mode development",
+		"watch": "webpack --mode development --watch",
 		"test-watch": "tsc -watch -p ./",
 		"pretest": "tsc -p ./",
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/jszip": "^3.1.6",
-		"@types/mocha": "^5.2.6",
-		"@types/node": "^10.12.21",
-		"@types/vscode": "^1.36.0",
-		"@types/xml-formatter": "^1.1.0",
-		"glob": "^7.1.4",
-		"mocha": "^6.1.4",
-		"ts-loader": "^6.0.4",
-		"tslint": "^5.12.1",
-		"typescript": "^3.3.1",
-		"vscode-test": "^1.0.0-next.0",
-		"webpack": "^4.38.0",
-		"webpack-cli": "^3.3.6"
+		"@types/glob": "^7.1.3",
+		"@types/jszip": "^3.4.1",
+		"@types/mocha": "^8.0.0",
+		"@types/node": "^14.0.24",
+		"@types/vscode": "^1.47.0",
+		"@types/xml-formatter": "^2.1.1",
+		"glob": "^7.1.6",
+		"mocha": "^8.0.1",
+		"ts-loader": "^8.0.1",
+		"tslint": "^6.1.2",
+		"typescript": "^3.9.7",
+		"vsce": "^1.77.0",
+		"vscode-test": "^1.4.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
-		"jszip": "^3.2.2",
-		"xml-formatter": "^1.1.0"
+		"jszip": "^3.5.0",
+		"xml-formatter": "^2.1.2"
 	}
 }
