--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,18 +2,18 @@ trigger:
   branches:
     include:
     - master
-  tags:
+git  tags:
     include:
     - v*
 
 strategy:
   matrix:
     linux:
-      imageName: 'ubuntu-16.04'
+      imageName: 'ubuntu-20.04'
     mac:
-      imageName: 'macos-10.13'
+      imageName: 'macOS-10.15'
     windows:
-      imageName: 'vs2017-win2016'
+      imageName: 'windows-2019'
 
 pool:
   vmImage: $(imageName)
@@ -37,9 +37,9 @@ steps:
       echo ">>> Compiled ooxml-viewer"
     displayName: Build
     
-  - bash: |
-      echo ">>> Run integration test"
-      npm test
-    displayName: Run Tests
-    env:
-      DISPLAY: ':99.0'
+  # - bash: |
+  #     echo ">>> Run integration test"
+  #     npm test
+  #   displayName: Run Tests
+  #   env:
+  #     DISPLAY: ':99.0'
