--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 	"devDependencies": {
 		"@types/glob": "^7.1.3",
 		"@types/jszip": "^3.4.1",
+		"@types/mkdirp": "^1.0.1",
 		"@types/mocha": "^8.0.0",
 		"@types/node": "^14.0.24",
 		"@types/vscode": "^1.47.0",
@@ -103,6 +104,7 @@
 	},
 	"dependencies": {
 		"jszip": "^3.5.0",
+		"mkdirp": "^1.0.4",
 		"xml-formatter": "^2.1.2"
 	}
 }
