--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"@types/mkdirp": "^1.0.1",
 		"@types/mocha": "^8.0.0",
 		"@types/node": "^14.0.24",
+		"@types/rimraf": "^3.0.0",
 		"@types/vscode": "^1.47.0",
 		"@types/xml-formatter": "^2.1.1",
 		"glob": "^7.1.6",
@@ -105,6 +106,7 @@
 	"dependencies": {
 		"jszip": "^3.5.0",
 		"mkdirp": "^1.0.4",
+		"rimraf": "^3.0.2",
 		"xml-formatter": "^2.1.2"
 	}
 }
