--- a/package.json
+++ b/package.json
@@ -86,20 +86,24 @@
     "lint": "eslint -c .eslintrc.js --ext .ts ./src"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
     "@types/glob": "^7.1.3",
     "@types/jszip": "^3.4.1",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.24",
     "@types/rimraf": "^3.0.0",
+    "@types/sinon": "^9.0.5",
     "@types/vscode": "^1.47.0",
     "@types/xml-formatter": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "chai": "^4.2.0",
     "eslint": "^7.7.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.1",
     "prettier": "^2.1.1",
+    "sinon": "^9.0.3",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7",
     "vsce": "^1.77.0",
