update list of files that extension can open

--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
         "extensions": [
           ".docx",
           ".xlsx",
-          ".pptx"
+          ".pptx",
+          ".odt",
+          ".ods",
+          ".odp"
         ]
       }
     ],
