Change context menu title

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "commands": [
       {
         "command": "ooxmlViewer.viewContents",
-        "title": "View Contents",
+        "title": "Open OOXML Parts",
         "when": "resourceLangId == ooxml"
       },
       {
