--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@types/node": "^14.0.24",
     "@types/rimraf": "^3.0.0",
     "@types/sinon": "^9.0.5",
+    "@types/uuid": "^8.3.0",
     "@types/vscode": "^1.47.0",
     "@types/xml-formatter": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
@@ -131,6 +132,7 @@
     "jszip": "^3.5.0",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
+    "uuid": "^8.3.0",
     "xml-formatter": "^2.1.2"
   }
 }
