--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "commands": [
       {
         "command": "ooxmlViewer.viewContents",
-        "title": "Open OOXML Parts",
+        "title": "Open OOXML Package",
         "when": "resourceLangId == ooxml"
       },
       {
@@ -121,6 +121,7 @@
     "prettier": "^2.1.2",
     "sinon": "^9.0.3",
     "ts-loader": "^8.0.1",
+    "ts-mock-imports": "^1.3.0",
     "typescript": "^3.9.7",
     "vsce": "^1.77.0",
     "vscode-test": "^1.4.0",
