--- a/package.json
+++ b/package.json
@@ -118,10 +118,10 @@
     "eslint": "^7.7.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.1.2",
     "sinon": "^9.0.3",
     "ts-loader": "^8.0.1",
-    "ts-mock-imports": "^1.3.0",
     "typescript": "^3.9.7",
     "vsce": "^1.77.0",
     "vscode-test": "^1.4.0",
