add additional file types that use OOXML protocol

--- a/package.json
+++ b/package.json
@@ -55,7 +55,16 @@
           ".pptx",
           ".odt",
           ".ods",
-          ".odp"
+          ".odp",
+          ".docm",
+          ".xlsm",
+          ".pptm",
+          ".dotx",
+          ".xltx",
+          ".xltm",
+          ".potx",
+          ".sldx",
+          ".ppsx"
         ]
       }
     ],
