--- a/package.json
+++ b/package.json
@@ -119,8 +119,8 @@
     "@types/rimraf": "^3.0.0",
     "@types/sinon": "^9.0.8",
     "@types/uuid": "^8.3.0",
+    "@types/vkbeautify": "^0.99.2",
     "@types/vscode": "^1.50.0",
-    "@types/xml-formatter": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
@@ -139,6 +139,6 @@
   },
   "dependencies": {
     "jszip": "^3.5.0",
-    "xml-formatter": "^2.3.1"
+    "vkbeautify": "^0.99.3"
   }
 }
