enable ci tests during build and minor cleanup

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,8 @@
-.vscode/
-vscode-test
-node_modules/
-out/
-src/
-.gitignore
-tsconfig.json
-tslint.json
-webpack.config.js
+*/**
+
+!dist
+!package.json
+!resources
+!README.md
+!CHANGELOG.md
+!LICENSE
