add support for .dotm files

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
           ".ods",
           ".odp",
           ".docm",
+          ".dotm",
           ".xlsm",
           ".pptm",
           ".dotx",
