--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
     "@types/chai": "^4.2.14",
     "@types/glob": "^7.1.3",
     "@types/jszip": "^3.4.1",
-    "@types/mocha": "^8.0.0",
+    "@types/mime-types": "^2.1.0",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.6",
     "@types/rimraf": "^3.0.0",
     "@types/sinon": "^10.0.1",
@@ -141,6 +142,7 @@
   },
   "dependencies": {
     "jszip": "^3.6.0",
+    "mime-types": "^2.1.30",
     "vkbeautify": "^0.99.3",
     "xml-formatter": "^2.4.0"
   }
