--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
         "command": "ooxmlViewer.showDiff",
         "title": "Compare with Previous",
         "when": "view == ooxmlViewer"
+      },
+      {
+        "command": "ooxmlViewer.searchParts",
+        "title": "Search Parts",
+        "when": "view == ooxmlViewer"
       }
     ],
     "languages": [
@@ -85,6 +90,11 @@
           "command": "ooxmlViewer.clear",
           "group": "navigation",
           "when": "view == ooxmlViewer"
+        },
+        {
+          "command": "ooxmlViewer.searchParts",
+          "group": "navigation",
+          "when": "view == ooxmlViewer"
         }
       ],
       "view/item/context": [
@@ -116,6 +126,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/find-in-files": "^0.5.1",
     "@types/glob": "^7.1.3",
     "@types/jszip": "^3.4.1",
     "@types/mime-types": "^2.1.0",
@@ -144,6 +155,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "find-in-files": "^0.5.0",
     "jszip": "^3.6.0",
     "mime-types": "^2.1.30",
     "vkbeautify": "^0.99.3",
