revert .vscodeignore settings causing build to fail

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,9 @@
-*/**
-
-!dist
-!package.json
-!resources
-!README.md
-!CHANGELOG.md
-!LICENSE
+.vscode/
+vscode-test
+node_modules/
+out/
+src/
+.gitignore
+tsconfig.json
+tslint.json
+webpack.config.js
