--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,8 @@ jobs:
   build-and-test:
     name: Build and Test on ${{ matrix.os }}
     strategy:
-      os: [ 'ubuntu-20.04', 'macOS-10.15', 'windows-2019' ]
+      matrix:
+        os: [ 'ubuntu-20.04', 'macOS-10.15', 'windows-2019' ]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout repository
