Update development settings
- Add more extensions to dev containers and added npm install as postCreateCommand
- Add editorconfig
- Update vscode workspace settings
- Replace eslint with prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "trailingComma": "all",
   "singleQuote": true,
   "printWidth": 140,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "bracketSpacing": true
 }
