--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "test-watch": "tsc -watch -p ./",
     "pretest": "tsc -p ./",
     "test": "node ./out/test/runTest.js",
-    "lint": "eslint -c .eslintrc.js --ext .ts ./"
+    "lint": "prettier --check ."
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -144,20 +144,15 @@
     "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
-    "@types/rimraf": "^3.0.2",
     "@types/sinon": "^10.0.11",
     "@types/vkbeautify": "^0.99.2",
     "@types/vscode": "^1.50.0",
     "@types/xml-formatter": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
     "chai": "^4.3.6",
-    "eslint": "^8.12.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^13.0.0",
     "sinon": "^13.0.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
