--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - v*
+      - v*.*.*
   pull_request:
   workflow_dispatch:
 
@@ -36,3 +36,24 @@ jobs:
         run: npm test
         env:
           DISPLAY: ':99.0'
+  release:
+    name: Release extension
+    runs-on: ubuntu-20.04
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+      - name: Install
+        run: npm install
+      - name: Package Extension
+        run: npx vsce package
+      - name: Publish Extension
+        run: npx vsce publish -p ${{ secrets.PUBLISH_TOKEN }}
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: *.vsix
