--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:openOoxmlPackage",
+    "onCommand:ooxmlViewer.openOoxmlPackage",
     "onView:ooxmlViewer"
   ],
   "main": "./dist/extension.js",
