--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
   "dependencies": {
     "jszip": "^3.9.1",
     "mime-types": "^2.1.35",
-    "vkbeautify": "^0.99.3"
+    "vkbeautify": "^0.99.3",
+    "xml-formatter": "^2.6.1"
   }
 }
