--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     name: Build and Test on ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['ubuntu-20.04', 'macOS-10.15', 'windows-2019']
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
