preserve comments in xml unless ooxmlViewer.preserveComments is false

--- a/package.json
+++ b/package.json
@@ -126,6 +126,16 @@
           "visibility": "visible"
         }
       ]
+    },
+    "configuration": {
+      "title": "OOXML Viewer",
+      "properties": {
+        "ooxmlViewer.preserveComments": {
+          "type": "boolean",
+          "description": "If true comments are preserved in xml parts, if false comments are removed on save. Defaults to true.",
+          "default": true
+        }
+      }
     }
   },
   "scripts": {
