--- a/package.json
+++ b/package.json
@@ -155,14 +155,14 @@
     "@types/node": "^18.11.18",
     "@types/sinon": "^10.0.13",
     "@types/vscode": "^1.50.0",
+    "@vscode/vsce": "^2.15.0",
     "chai": "^4.3.7",
-    "glob": "^8.0.3",
+    "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.3",
     "sinon": "^15.0.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
-    "vsce": "^2.10.0",
     "vscode-test": "^1.6.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
