Add file size limits

--- a/package.json
+++ b/package.json
@@ -152,6 +152,21 @@
           "type": "boolean",
           "description": "If true comments are preserved in xml parts, if false comments are removed on save. Defaults to true.",
           "default": true
+        },
+        "ooxmlViewer.maximumOoxmlFileSizeBytes": {
+          "type": "number",
+          "description": "The maximum size of an ooxml package that the ooxml viewer will be allowed to open. Defaults to 50,000,000.",
+          "default": 50000000
+        },
+        "ooxmlViewer.maximumNumberOfOoxmlParts": {
+          "type": "number",
+          "description": "The maximum number of parts the ooxml viewer will be allowed to open. Defaults to 1,000.",
+          "default": 1000
+        },
+        "ooxmlViewer.maximumXmlPartsFileSizeBytes": {
+          "type": "number",
+          "description": "The maximum size of an xml file in bytes that the ooxml viewer will try to format. Defaults to 100,000.",
+          "default": 1000000
         }
       }
     }
