--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "@types/node": "^20.2.5",
     "@types/sinon": "^10.0.15",
     "@types/vscode": "^1.50.0",
+    "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.19.0",
     "chai": "^4.3.7",
     "glob": "^8.1.0",
@@ -196,7 +197,6 @@
     "sinon": "^15.1.0",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
-    "vscode-test": "^1.6.1",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
   },
